# SlicerStereotaxia

./: .gitignore  CMakeLists.txt  Estereotaxia.ods  Estereotaxia.xlsx  Estereotaxia_Micromar_DOWNWARD.xlsx  Estereotaxia_Micromar_UPWARD.xlsx  LICENSE.md  Parameters_Viewer.py  Pruebas_Rutinas.py  README.md  SlicerStereotaxia.py  SlicerStereotaxiaLite.py
Espacio_Marco/: CT-Muscle.vp  CoordinateModel.vtk  Displacement to color.txt  Transformada_Arruinadora.h5  _Marco_Scene.mrml
Recursos/: Maquina_Russell_Brown - copia.py.txt  Maquina_Russell_Brown.py  gestion_Fiduciarios.py  utilitarios.py  utilitariosOld.py.txt
Stereotaxia/: CMakeLists.txt  Stereotaxia.py
Stereotaxia/Recursos/: Maquina_Russell_Brown.py  __init__.py  gestion_Fiduciarios.py  utilitarios.py
Stereotaxia/Resources/Espacio_Marco/: Aguja_de_Puncion.vtk  Arco.vtk  N_Locators.vtk  Transformada_Der_Izq.h5  Transformada_angulo_Beta.h5  _Marco_Scene.mrml  content.txt
StereotaxiaLite/: CMakeLists.txt  StereotaxiaLite.py
find_zFrame/: CMakeLists.txt  find_zFrame.py
find_zFrame/Resources/Leksell_Frame/: ZFrame_A.stl  ZFrame_LAR.stl  ZFrame_P.stl  ZFrame_R.stl
find_zFrame_SlicerStereotactic/: CMakeLists.txt
find_zFrame_SlicerStereotactic/Ressources/: segmentZframe.py
find_zFrame_SlicerStereotactic/Ressources/Leksell_Frame/: ZFrame.scad  ZFrame_L.stl  ZFrame_S.stl  leksell2RAS.h5
probeView/: CMakeLists.txt  probeView.py
probeView_SlicerStereotactic/: CMakeLists.txt  probeView.py
resources/Images/: Logo.xcf  Logo2.xcf
stereo_points/: CMakeLists.txt  stereo_points.py
stereo_points_SlicerStereotactic/: CMakeLists.txt  stereo_points.py
